# python-sdk

./: README.md  pyproject.toml
.github/workflows/: check.yml  release.yml
edgee/: __init__.py
example/: compression.py  test.py
examples/: stream_tools.py  tools_auto.py  tools_multiple.py
tests/: test_edgee.py
