[project]
name = "edgee"
version = "0.1.1"
description = "Lightweight Python SDK for Edgee AI Gateway"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "Edgee", email = "support@edgee.cloud" }
]
keywords = ["ai", "llm", "gateway", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/edgee-cloud/python-sdk"
Repository = "https://github.com/edgee-cloud/python-sdk"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
